# cmpt433

./: .gitignore
blinky/cached_build_file/: zephyr.elf
private/: CMakeLists.txt  as2-gdb.txt  as2.tgz  debug.gdb  gpio.c  helloworld.c
private/as1/: CMakeLists.txt
private/as1/app/: CMakeLists.txt  JoystickInterp.c  JoystickInterp.h  main.c
private/as1/hal/: CMakeLists.txt  I2C.c  JoystickControl.c  LEDcontrol.h
private/as2/: CMakeLists.txt  noworky  noworky.c  remoteDebug.gdb
private/as2/app/: CMakeLists.txt  main.c  network.c  network.h  shutdown.c  shutdown.h
private/as2/app/include/: RotaryEncoder.h  Sampler.h  UseLCD.h  network.h  output.h  shutdown.h
private/as2/app/src/: RotaryEncoder.c  Sampler.c  main.c  network.c  output.c  shutdown.c
private/as2/hal/: CMakeLists.txt
private/as2/hal/include/: I2C.h  LED_Emitter.h  RE_statemachine.h  gpio.h  lightSensor.h
private/as2/hal/src/: I2C.c  LED_Emitter.c  RE_statemachine.c  gpio.c  lightSensor.c
private/as3/: CMakeLists.txt
private/as3/app/: CMakeLists.txt
private/as3/app/include/: AccelerometerInterp.h  JoystickInterp.h  UseLCD.h  audio_handler.h  gpio_events.h  network.h  output.h  shutdown.h
private/as3/app/src/: AccelerometerInterp.c  JoystickInterp.c  UseLCD.c  audio_handler.c  gpio_events.c  main.c  network.c  output.c  periodTimer.c
private/as3/hal/: CMakeLists.txt
private/as3/hal/include/: Accelerometer.h  Button_statemachine.h  I2C.h  JoystickButton.h  JoystickControl.h  LCD.h  Rotary_Encoder_statemachine.h  UDP.h  Watch_gpio.h  periodTimer.h
private/as3/hal/src/: Accelerometer.c  Button_statemachine.c  I2C.c  JoystickControl.c  Rotary_Encoder_statemachine.c  UDP.c  Watch_gpio.c  audioMixer.c
private/as3/server/public/javascripts/: beatbox_ui.js
private/as4/: CMakeLists.txt
private/as4/R5/: load_r5_mcu.sh
private/as4/R5/src/: main.c
private/as4/app/: CMakeLists.txt
private/as4/app/include/: AccelerometerApp.h  GameLoop.h  NeopixelApp.h
private/as4/app/src/: AccelerometerApp.c  GameLoop.c  NeopixelApp.c  main.c  shutdown.c
private/as4/hal/: CMakeLists.txt
private/as4/hal/include/: Accelerometer.h  SharedMemory.h  Watch_gpio.h  sharedDataLayout.h
private/as4/hal/src/: Accelerometer.c  Button_statemachine.c  I2C.c  JoystickButton.c  LCD.c  SharedMemory.c
private/ass1/app/: main.c
private/hal/: JoystickControl.c  JoystickControl.h  LEDcontrol.c  LEDcontrol.h
private/work/neopixel/: r5_mcu_build.sh
private/work/pcmExample/: Makefile  wave_player.c
public/: Assignment2  Bop_It  Reaction_Game  Security_pet_cam  ledcontrol  light_sampler  simple_cmake
public/myApps/: Bop_It  noworky  wave_player
